--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
-
 </head>
 <body>
-    
+    <div class="container">
+        <div class="left-pannel">
+            <div class="logo">
+                <h1>The Logo</h1>
+            </div>
+        </div>
+        <div class="right-pannel">
+
+        </div>
+    </div>
 </body>
 </html>
