Added logo and changed title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <div class="left-pannel">
             <div class="logo">
-                <h1>The Logo</h1>
+                <img src="./img/logo.png" alt="ODIN logo">
+                <h1>ODIN</h1>
             </div>
         </div>
         <div class="right-pannel">
