Added & aligned credits to background pic

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <img src="./img/logo.png" alt="ODIN logo">
                 <h1>ODIN</h1>
             </div>
+            <div class="photo-credit">
+                <p>Photo by <a href="https://www.pexels.com/@pixabay/">Pixabay</a> from <a href="https://www.pexels.com/">Pexels</a></p>
+            </div>
         </div>
         <div class="right-pannel">
 
