--- a/index.html
+++ b/index.html
@@ -21,29 +21,44 @@
         <div class="right-pannel">
             <div class="text-intro">
                 <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h2>
+                <br>
                 <h2>You <em>know</em> you want to.</h2>
             </div>
             <form action="#" method="post">
                 <div class="card">
                     <h2>Let's do this!</h2>
-
-                    <label for="first_name">First Name</label>
-                    <input type="text" id="first_name" name="first_name" placeholder="John?">
-                    
-                    <label for="last_name">Last Name</label>
-                    <input type="text" id="last_name" name="last_name" placeholder="Doe?">
-
-                    <label for="email">E-Mail</label>
-                    <input type="email" id="email" name="email" placeholder="john.doe@something.com">
-
-                    <label for="tele">Telephone Number</label>
-                    <input type="tel" id="tele" name="tele" placeholder="Home or mobile">
-
-                    <label for="pass">Password</label>
-                    <input type="password" id="pass" name="pass" required>
-
-                    <label for="conf_pass">Confirm Password</label>
-                    <input type="password" id="conf_pass" name="conf_pass" required>
+                    <div class="form-size">
+                        <div class="row">
+                            <div class="column">
+                                <label for="first_name">First Name</label>
+                                <input type="text" id="first_name" name="first_name" placeholder="John?">
+                            </div>
+                            <div class="column">
+                                <label for="last_name">Last Name</label>
+                                <input type="text" id="last_name" name="last_name" placeholder="Doe?">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="column">
+                                <label for="email">E-Mail</label>
+                                <input type="email" id="email" name="email" placeholder="john.doe@something.com">
+                            </div>
+                            <div class="column">
+                                <label for="tele">Telephone Number</label>
+                                <input type="tel" id="tele" name="tele" placeholder="Home or mobile">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="column">
+                                <label for="pass">Password</label>
+                                <input type="password" id="pass" name="pass" required>
+                            </div>
+                            <div class="column">
+                                <label for="conf_pass">Confirm Password</label>
+                                <input type="password" id="conf_pass" name="conf_pass" required>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <button type="submit">Create Account</button>
