Added form title class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <form action="#" method="post">
                     <div class="card">
-                        <h2>Let's do this!</h2>
+                        <h2 class="form-title">Let's do this!</h2>
                         <div class="form-size">
                             <div class="row">
                                 <div class="column">
