Added right photo credit, password invalid style

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     <p>Already have an account? <a href="#">Log In</a></p>
                 </div>
             </div>
+            <div class="photo-credit-right">
+                <p>Photo by <a href="https://www.pexels.com/@miroalt/">Miro Alt</a> from <a href="https://www.pexels.com/">Pexels</a></p>
+            </div>
         </div>
     </div>
 </body>
