Made login more visuble

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <button type="submit">Create Account</button>
                 </form>
                 <div class="sign-in">
-                    <p>Already have an account? <a href="#">Log In</a></p>
+                    <p>Already have an account? <a href="#" class="login-link">Log In</a></p>
                 </div>
             </div>
             <div class="photo-credit-right">
