Allow only max 30 char for password

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                             <div class="row">
                                 <div class="column">
                                     <label for="pass">Password *</label>
-                                    <input type="password" id="pass" name="pass" minlength="8" required>
+                                    <input type="password" id="pass" name="pass" minlength="8" maxlength="30" required>
                                 </div>
                                 <div class="column">
                                     <label for="conf_pass">Confirm Password *</label>
-                                    <input type="password" id="conf_pass" name="conf_pass" minlength="8" required>
+                                    <input type="password" id="conf_pass" name="conf_pass" minlength="8" maxlength="30" required>
                                 </div>
                             </div>
                         </div>
