Added active password match check

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                 <div class="column">
                                     <label for="conf_pass">Confirm Password *</label>
                                     <input type="password" id="conf_pass" name="conf_pass" minlength="8" maxlength="30" required>
+                                    <p class="small no-match"></p>
                                 </div>
                             </div>
                         </div>
